create images directory, add a cookbook image to the index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        
+        <img src="./images/cookbook-color.gif" alt="A colored image of a cookbook with a wooden spoon and glass measuring jug accompanying.">
+        <p><a href="./recipes/crusty-dutch-oven-bread.html">Crusty Dutch Oven Bread</a></p>
+        <p><a href="./recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a></p>
+        <p><a href="./recipes/oven-scrambled-eggs.html">Oven Scrambled Eggs</a></p>
     </body>
 </html>
