--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <img src="./images/cookbook-color.gif" alt="A colored image of a cookbook with a wooden spoon and glass measuring jug accompanying.">
+        <p><em>Image sourced from https://inspirationlane.blogspot.com/2007/08/cooking-state.html</em></p>
         <p><a href="./recipes/crusty-dutch-oven-bread.html">Crusty Dutch Oven Bread</a></p>
         <p><a href="./recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a></p>
         <p><a href="./recipes/oven-scrambled-eggs.html">Oven Scrambled Eggs</a></p>
