--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Crusty Dutch Oven Bread</h1>
+        <img src="../images/crusty-dutch-oven-bread.jpg" alt="A picture of freshly baked crusty dutch oven bread.">
+        <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
         
     </body>
 </html>
