add description for recipe

--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -8,6 +8,9 @@
         <h1>Crusty Dutch Oven Bread</h1>
         <img src="../images/crusty-dutch-oven-bread.jpg" alt="A picture of freshly baked crusty dutch oven bread.">
         <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
+        <h2>Description</h2>
+        <p>An incredibly easy, crusty white bread cooked inside a Dutch oven.</p>
+        <p>A forgiving and tasty recipe for bread baking beginners.</p>
         
     </body>
 </html>
