--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -64,5 +64,7 @@
                 Remove the lid and continue baking until deep golden, 25 to 30 minutes.
             </li>
         </ol>
+        <p><a href="#">Go to the top of this page</a></p>
+        <p><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
