--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -64,6 +64,7 @@
                 Remove the lid and continue baking until deep golden, 25 to 30 minutes.
             </li>
         </ol>
+        <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
         <p><a href="#">Go to the top of this page</a></p>
         <p><a href="../index.html">Return to the home page</a></p>
     </body>
