add image and attribution to oven eggs recipe page

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Oven Scrambled Eggs</h1>
-        
+        <img src="../images/oven-scrambled-eggs.jpg" alt="A picture of freshly baked oven scrambled eggs in a glass baking pan.">
+        <!--image and recipe acquired from external source an should be attributed for posterity-->
+        <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
     </body>
 </html>
