add the description of the oven eggs recipe to its page

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -9,5 +9,11 @@
         <img src="../images/oven-scrambled-eggs.jpg" alt="A picture of freshly baked oven scrambled eggs in a glass baking pan.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
         <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
+
+        <h2>Description</h2>
+        <p>These baked scrambled eggs are light and fluffy and are a snap to put together for a big crowd.</p>
+        <p>I usually make two pans for our Christmas brunch, and I never have many leftovers!</p>
+        <p><em>9x13 inch oven ready glass dish or similar required</em></p>
+        
     </body>
 </html>
