add the ingredients unordered list to the recipe page

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -14,6 +14,13 @@
         <p>These baked scrambled eggs are light and fluffy and are a snap to put together for a big crowd.</p>
         <p>I usually make two pans for our Christmas brunch, and I never have many leftovers!</p>
         <p><em>9x13 inch oven ready glass dish or similar required</em></p>
-        
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1/2 cup butter or margerine, melted</li>
+            <li>24 eggs</li>
+            <li>2 1/4 teaspons salt</li>
+            <li>2 1/2 cups milk</li>
+        </ul>
     </body>
 </html>
