add and populate the steps ordered list to the recipe page

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -22,5 +22,24 @@
             <li>2 1/4 teaspons salt</li>
             <li>2 1/2 cups milk</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>
+                <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
+            </li>
+            <p></p>
+            <li>
+                <p>Pour melted butter into a 9x13-inch glass baking dish (or similar).</p>
+            </li>
+            <p></p>
+            <li>
+                <p>Whisk together eggs and salt in a large bowl until well-blended. Gradually whisk in milk. Pour egg mixture into the buttered dish.</p>
+            </li>
+            <p></p>
+            <li>
+                <p>Bake uncovered in the preheated oven for 10 minutes. Stir egg mixture and continue to bake until eggs are set, 10 to 15 minutes more.</p>
+            </li>
+        </ol>
     </body>
 </html>
