add navigation links to bottom of oven eggs page

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -22,7 +22,7 @@
             <li>2 1/4 teaspons salt</li>
             <li>2 1/2 cups milk</li>
         </ul>
-
+        <!--empty paragraphs added in between each list element to increase readability-->
         <h2>Steps</h2>
         <ol>
             <li>
@@ -41,5 +41,8 @@
                 <p>Bake uncovered in the preheated oven for 10 minutes. Stir egg mixture and continue to bake until eggs are set, 10 to 15 minutes more.</p>
             </li>
         </ol>
+        <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
+        <p><a href="#">Go to the top of this page</a></p>
+        <p><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
