add image and recipe attribution to grilled tomahawk page

--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Grilled Tomahawk Steak</h1>
-        
+        <img src="../images/grilled-tomahawk.jpg" alt="A picture of grilled tomahawk steak on a bed of rice.">
+        <!--image and recipe acquired from external source an should be attributed for posterity-->
+        <p><em>Recipe by Ashley Elizabeth, recipe and photo sourced from https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957</em></p>
+
     </body>
 </html>
