--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -8,7 +8,7 @@
         <h1>Crusty Dutch Oven Bread</h1>
         <img src="../images/crusty-dutch-oven-bread.jpg" alt="A picture of freshly baked crusty dutch oven bread.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
-        <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
+        <p><em>Recipe by Stacey, recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
         
         <h2>Description</h2>
         <p>An incredibly easy, crusty white bread cooked inside a Dutch oven.</p>
