update attribution message to include author

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -8,7 +8,7 @@
         <h1>Oven Scrambled Eggs</h1>
         <img src="../images/oven-scrambled-eggs.jpg" alt="A picture of freshly baked oven scrambled eggs in a glass baking pan.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
-        <p><em>Recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
+        <p><em>Recipe by Erin, recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
 
         <h2>Description</h2>
         <p>These baked scrambled eggs are light and fluffy and are a snap to put together for a big crowd.</p>
