add and populate tomahawk steak description to page

--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -10,5 +10,10 @@
         <!--image and recipe acquired from external source an should be attributed for posterity-->
         <p><em>Recipe by Ashley Elizabeth, recipe and photo sourced from https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957</em></p>
 
+        <h2>Description</h2>
+        <p>This grilled tomahawk steak recipe is a showstopper, ideal for sharing with friends and family. This reverse-seared steak is cooked to perfection with an unctuous compound butter filled with shallots, garlic, and chives.</p>
+        <p>I like to use a Bluetooth-enabled meat thermometer to help me achieve the perfect medium-rare internal temperature.</p>
+
+        
     </body>
 </html>
