add the ingredients list for the tomahawk steak page

--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -13,7 +13,24 @@
         <h2>Description</h2>
         <p>This grilled tomahawk steak recipe is a showstopper, ideal for sharing with friends and family. This reverse-seared steak is cooked to perfection with an unctuous compound butter filled with shallots, garlic, and chives.</p>
         <p>I like to use a Bluetooth-enabled meat thermometer to help me achieve the perfect medium-rare internal temperature.</p>
-
+        <!--this recipe has two separate ingredients lists, one for the steak rub and steak, and another for the compound butter-->
+        <h2>Ingredients</h2>
+        <h3>Steak Rub and Steak:</h3>
+        <ul>
+            <li>1 tablespoon brown sugar</li>
+            <li>1 tablespoon montreal steak seasoning</li>
+            <li>2 teaspons garlic powder</li>
+            <li>2 teaspoons onion powder</li>
+            <li>1 (2 3/4 pound) tomahawk steak (3 inch thick bone-in ribeye)</li>
+        </ul>
+        <h3>Compound Butter:</h3>
+        <ul>
+            <li>1/4 cup salted butter, room temperature</li>
+            <li>1 tablespoon shallot, minced</li>
+            <li>1 clove garlic, minced</li>
+            <li>1 tablespoon fresh chives, chopped</li>
+            <li>2 teaspoons reserved steak rub</li>
+        </ul>
         
     </body>
 </html>
