add navigation links to bottom of page

--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -87,5 +87,8 @@
         <p>
             Searing the steak on each side produces that crispy crust without overcooking the steak.
         </p>
+        <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
+        <p><a href="#">Go to the top of this page</a></p>
+        <p><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
