remove unnecessary paragraphs in steps list

--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -26,19 +26,19 @@
         <h2>Steps</h2>
         <ol>
             <li>
-                <p>Preheat the oven to 350 degrees F (175 degrees C).</p>
+                Preheat the oven to 350 degrees F (175 degrees C).
             </li>
             <p></p>
             <li>
-                <p>Pour melted butter into a 9x13-inch glass baking dish (or similar).</p>
+                Pour melted butter into a 9x13-inch glass baking dish (or similar).
             </li>
             <p></p>
             <li>
-                <p>Whisk together eggs and salt in a large bowl until well-blended. Gradually whisk in milk. Pour egg mixture into the buttered dish.</p>
+                Whisk together eggs and salt in a large bowl until well-blended. Gradually whisk in milk. Pour egg mixture into the buttered dish.
             </li>
             <p></p>
             <li>
-                <p>Bake uncovered in the preheated oven for 10 minutes. Stir egg mixture and continue to bake until eggs are set, 10 to 15 minutes more.</p>
+                Bake uncovered in the preheated oven for 10 minutes. Stir egg mixture and continue to bake until eggs are set, 10 to 15 minutes more.
             </li>
         </ol>
         <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
