--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -35,27 +35,33 @@
         <h2>Steps</h2>
         <ol>
             <li>
-                To make steak rub, place brown sugar, Montreal steak seasoning, garlic powder, and onion powder in a small airtight container; shake or stir to combine. Set aside 2 teaspoons steak rub to use in compound butter.
+                To make steak rub, place brown sugar, Montreal steak seasoning, garlic powder, and onion powder in a small airtight container; shake or stir to combine.
+                Set aside 2 teaspoons steak rub to use in compound butter.
             </li>
             <p></p>
             <li>
-                Place steak on a half sheet pan, and rub steak on top, bottom, and sides with remaining steak rub until well coated. Place steak, uncovered, in the refrigerator to dry-brine overnight.
+                Place steak on a half sheet pan, and rub steak on top, bottom, and sides with remaining steak rub until well coated.
+                Place steak, uncovered, in the refrigerator to dry-brine overnight.
             </li>
             <p></p>
             <li>
-                For compound butter, place butter, shallot, garlic, chives, and the reserved 2 teaspoons steak rub in a small bowl. Mash together with a fork until evenly combined. Spoon butter into a small airtight container, cover, and refrigerate until ready to use.
+                For compound butter, place butter, shallot, garlic, chives, and the reserved 2 teaspoons steak rub in a small bowl.
+                Mash together with a fork until evenly combined. Spoon butter into a small airtight container, cover, and refrigerate until ready to use.
             </li>
             <p></p>
             <li>
-                Remove steak from the refrigerator 1 hour before cooking to take the chill off. It will cook on the sheet pan that you used for dry-brining. 
+                Remove steak from the refrigerator 1 hour before cooking to take the chill off.
+                It will cook on the sheet pan that you used for dry-brining. 
             </li>
             <p></p>
             <li>
-                Preheat the oven to 300 degrees F (150 degrees C). The reverse sear method is used to cook this big steak, so you will need an instant-read thermometer. If you are using a digital meat thermometer, set the internal temperature to 110 degrees F (43 degrees C).
+                Preheat the oven to 300 degrees F (150 degrees C). The reverse sear method is used to cook this big steak, so you will need an instant-read thermometer.
+                If you are using a digital meat thermometer, set the internal temperature to 110 degrees F (43 degrees C).
             </li>
             <p></p>
             <li>
-                Bake steak on the sheet pan in the preheated oven until an instant-read thermometer inserted into the center reads 110 degrees F (43 degrees C), about 45 minutes. Begin checking the temperature at 30 minutes. 
+                Bake steak on the sheet pan in the preheated oven until an instant-read thermometer inserted into the center reads 110 degrees F (43 degrees C), about 45 minutes.
+                Begin checking the temperature at 30 minutes. 
             </li>
             <p></p>
             <li>
@@ -67,11 +73,13 @@
             </li>
             <p></p>
             <li>
-                Grill steak directly on the grates of the preheated grill; sear on both sides, about 2 minutes per side. This is a fatty piece of meat, so be mindful of flame flare-ups. The internal temperature should now read 125 to 135 degrees F (51 to 57 degrees C) for medium rare.
+                Grill steak directly on the grates of the preheated grill; sear on both sides, about 2 minutes per side.
+                This is a fatty piece of meat, so be mindful of flame flare-ups. The internal temperature should now read 125 to 135 degrees F (51 to 57 degrees C) for medium rare.
             </li>
             <p></p>
             <li>
-                Remove steak from the grill, and smear compound butter over top. Let butter melt into the steak, heating up the fresh garlic, shallots, and chives. Let steak rest for 10 minutes.
+                Remove steak from the grill, and smear compound butter over top. Let butter melt into the steak, heating up the fresh garlic, shallots, and chives.
+                Let steak rest for 10 minutes.
             </li>
             <p></p>
             <li>
